Fixed #8029: logo frontend Fixed #8030: name plugin menu Fixed #8031: options description Fixed #8033: added description options Fixed #8034: session timeout frontend

--- a/assets/admin/css/style.css
+++ b/assets/admin/css/style.css
@@ -66,3 +66,26 @@
 .form-str {
     padding-bottom: 10px;
 }
+
+/*.white-label-form-wrapper .form-row input[type=number],*/
+/*.white-label-form-wrapper  .form-row input[type=text],*/
+/*.white-label-form-wrapper .form-row select {*/
+    /*width: 350px;*/
+/*}*/
+/*.white-label-form-wrapper .form-element-wrapper{*/
+   /*overflow:hidden;*/
+/*}*/
+/*.white-label-form-wrapper .description{*/
+    /*margin-left: 1px;*/
+    /*margin-right:1px;*/
+/*}*/
+
+.white-label-form-wrapper .form-table tr td:first-child{
+    width:200px;
+    vertical-align: top;
+}
+@media screen and (max-width: 782px){
+    .white-label-form-wrapper .form-table tr td:first-child{
+        width:100%;
+    }
+}
